[package]
edition = "2018"
name = "pj-card-bot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
crypto-mac = "0.11.1"
derive_more = "0.99.16"
env_logger = "0.9.0"
envy = "0.4.2"
futures = {version = "0.3.17", features = ["compat"]}
hex = "0.4.3"
hmac = {version = "0.11.0", features = ["std"]}
humantime = "2.1.0"
hyper = {version = "0.14.13", features = ["full"]}
log = "0.4.14"
reqwest = {version = "0.11.6", default-features = false, features = ["rustls-tls"]}
serde = "1.0.130"
serde_json = "1.0.68"
sha2 = "0.9.8"
tokio = {version = "1.12.0", features = ["full"]}

[dependencies.github-types]
branch = "master"
git = "https://github.com/jasonwhite/github-types"
